--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "algolia-places-react": "^1.5.1",
+    "antd": "^3.26.11",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
