--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "BROWSER='firefox' PORT=4000 react-scripts start",
