--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "algolia-places-react": "^1.5.1",
     "antd": "^3.26.11",
+    "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "mapbox-gl": "^1.10.0",
     "node-sass": "^4.14.1",
