Create isFetching state im App to show fetching status

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "yup": "^0.29.0"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
+    "start": "BROSWER='firefox' PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
